# OSI

./: LICENSE
osi-client/: Cargo.toml  tauri.conf.json
osi-client/client/: main.rs  system.rs
osi-server/: package-lock.json  package.json
osi-server/src/: index.ts
