[package]
name = "osi"
version = "0.0.1"
description = "Ouki Server Information"
authors = ["Ouki"]
license = "MIT"
repository = "https://github.com/Ouki76/OSI"
edition = "2021"

[[bin]]
name = "osi"
path = "manager/main.rs"

[[bin]]
name = "client"
path = "client/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies.websocket]
git = "https://github.com/websockets-rs/rust-websocket.git"

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.29.11"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
